[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bot.png" type="Texture" id=1]
[ext_resource path="res://scripts/bot.gd" type="Script" id=2]
[ext_resource path="res://assets/white_cercle.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/UnitDisplay.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 60.4574

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.4 ), Vector2( 0.3, 0.35 ), Vector2( 0.3, 0.4 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.6075

[node name="Bot" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
health = 100

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0.157776, -19.8803 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="Body"]
scale = Vector2( 0.3, 0.391506 )
texture = ExtResource( 1 )

[node name="Aggressive" type="Sprite" parent="Body"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="DetrctRadius" type="Area2D" parent="Body"]

[node name="CollisionRadius" type="CollisionShape2D" parent="Body/DetrctRadius"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.225937, -20.1084 )
shape = SubResource( 3 )

[node name="UnitDisplay" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="Body/DetrctRadius" to="." method="_on_DetrctRadius_body_entered"]
[connection signal="body_exited" from="Body/DetrctRadius" to="." method="_on_DetrctRadius_body_exited"]
